--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Victor Locoman [victor.locoman@digitalnation.ro]",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4"
   }
 }
