--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongodb": "^3.6.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
