--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Victor Locoman [victor.locoman@digitalnation.ro]",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.2"
