--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mongodb": "^3.6.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4"
   }
