Revert "Puie marian patch 1"

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cms",
   "version": "0.0.1",
+  "description": "",
   "main": "src/server",
   "scripts": {
     "start": "nodemon"
@@ -14,12 +15,6 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "modules": "^0.4.0",
     "nodemon": "^2.0.4"
-  },
-  "bugs": {
-    "url": "https://github.com/Digital-Nation/JS-CMS-Victor-Locoman/issues"
-  },
-  "homepage": "https://github.com/Digital-Nation/JS-CMS-Victor-Locoman#readme",
-  "description": ""
+  }
 }
